web/static/css/marketing.scss
@import "modules/colors";

$base-font-color: #191919;
$base-font-family: "Tiempos Text", Georgia, serif;
$base-font-size: 15px;
$base-line-height: 1.6;
$action-color: $muted-lilac;
$base-border-color: $solitude;
$input-border: 1px solid $gray-lighter;

@import "modules/tiempos-text";
@import "modules/variables";
@import "partials/base";

.page-wrap {
  background-color: $white;
  background-image: url("/images/marketing/header-background.svg");
  background-repeat: no-repeat;
  background-position: top center;
  box-shadow: 0 5px 4px -4px transparentize($black, 0.68);
  margin-bottom: 5rem;
  padding-bottom: 5rem;
  position: relative;
  z-index: 2;
}

main {
  > section {
    margin-left: auto;
    margin-right: auto;
    max-width: 35.375rem;
  }
}

h4 {
  margin-bottom: 1rem;
  margin-top: 1rem;
}

li {
  margin-bottom: 1rem;
}

.header-quote {
  color: $gray-darkest;
  font-size: 1.5626rem;
  line-height: 1.44;
  margin: 1em auto;
  max-width: 38rem;
  text-align: center;

  &::after {
    border-bottom: 2px solid $gray-lighter;
    content: "";
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2rem;
    width: 2.6rem;
  }

  svg {
    display: block;
    margin: 1rem auto;
  }
}

.site-header {
  padding: 1.25rem;
  text-align: right;
}

.button-style__a {
  background-color: $white;
  border: $base-border;
  border-radius: 2rem;
  box-shadow: 0 1px 4px 0 lighten($gray-lighter, 4%);
  display: inline-block;
  font-size: 0.875rem;
  font-weight: bold;
  padding: 0.5rem 2rem calc(0.5rem + 1px);
  text-decoration: none;
}

.site-footer {
  $extra-gradient-start: $midnight-blue;
  $extra-gradient-end: $deep-lilac;
  background-image: linear-gradient(to right, $extra-gradient-start 5%, $extra-gradient-end);
  bottom: 0;
  color: $white;
  height: 5rem;
  padding: 1.25rem;
  position: fixed;
  width: 100%;
  z-index: 1;

  :any-link {
    color: $white;
  }

  .container {
    align-items: center;
    display: flex;
    height: 100%;
  }

  &__copyright {
    flex: 1;
  }

  &__links {
    a {
      margin-left: 2.2rem;
    }
  }
}

.container {
  margin-left: auto;
  margin-right: auto;
  max-width: 68rem;
}

.speech-bubbles {
  @include clearfix;

  margin: 3.125rem auto;
  max-width: 18rem;

  &__p {
    border-radius: 0.8rem;
    font-family: $system-font-stack;
    font-size: 0.875rem;
    line-height: 1.5rem;
    margin: 0.3125rem 0;
    padding: 0.5em 1em;
    position: relative;

    &::before {
      bottom: 0;
      content: " ";
      height: 20px;
      position: absolute;
      z-index: -1;
    }

    &::after {
      background: $white;
      bottom: 0;
      content: " ";
      height: 20px;
      position: absolute;
      width: 26px;
      z-index: 1;
    }
  }

  &__p_from-us {
    $bg-color: lighten($gray-lighter, 7%);
    background-color: $bg-color;
    float: right;

    &::before {
      border-bottom-left-radius: 16px 14px;
      border-right: 20px solid $bg-color;
      right: -7px;
    }

    &::after {
      border-bottom-left-radius: 10px;
      right: -26px;
    }
  }

  &__p_from-them {
    background-image: $extra-gradient;
    color: $white;
    float: left;

    &::before {
      border-bottom-right-radius: 16px 14px;
      border-left: 20px solid $extra-gradient-start;
      left: -7px;
    }

    &::after {
      border-bottom-right-radius: 10px;
      left: -26px;
    }
  }

  em {
    color: $action-color;
    font-style: normal;
    font-weight: bold;
  }
}

.fancy-list {
  padding-left: 1.6rem;

  &_star {
    list-style-image: url("/images/star.svg");
  }

  &_checkmark {
    list-style-image: url("/images/checkmark.svg");
  }
}

.beta-signup {
  position: relative;

  &_label {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
  }

  [type=email] {
    border-radius: $base-spacing;
    font-size: 14px;
    padding: 0.75em 1.4rem calc(0.75em + 2px);
  }

  &_button {
    border-color: $gray-light;
    border-radius: $base-spacing;
    bottom: 0;
    box-shadow: 0 1px 4px 0 lighten($gray-lighter, 4%);
    font-size: 14px;
    font-weight: bold;
    padding: 0.75em 2rem calc(0.75em + 2px);
    position: absolute;
    right: 0;
    text-decoration: none;
  }
}

.impressions-graph {
  display: flex;
  flex: 1;
  flex-direction: column;
  font-family: $system-font-stack;
  font-size: 0.75rem;
  margin-left: 3.125rem;
  padding-bottom: 1rem;

  &__caption {
    font-weight: bold;
    line-height: 1.5rem;
    margin-bottom: 0.625rem;
    margin-top: 1rem;
  }

  &__container {
    border: $base-border;
    border-radius: 0.5rem;
    display: flex;
    flex: 1;
    padding: 1.125rem;
  }

  &__column {
    display: flex;
    flex: 1;
    flex-direction: column;
    font-size: 0.8125rem;
    text-align: center;
  }

  &__label {
    color: $gray-light;
    margin-top: 0.5rem;
    order: 2;
  }

  &__value {
    align-items: flex-end;
    color: $white;
    display: flex;
    flex: 1;
    margin: 0 auto;
    vertical-align: bottom;
    width: 3.25rem;
  }

  &__bar {
    background-image: linear-gradient(to bottom, $extra-gradient-start, $extra-gradient-end);
    border-radius: 0.25rem;
    flex: 1;
    height: 100%;
    padding-top: 0.5rem;
  }
}

.two-columns {
  display: flex;
}

.column {
  width: 18rem;

  h4 {
    margin-right: 1rem;
  }
}

hr {
  border: none;
  border-top: 1px solid $base-border-color;
  max-width: 35rem;
}

